packages/rust/holy/tests/fail/02-tuple-struct.rs
use holy::Getters;

#[derive(Getters)]
struct Nope(i32, i32);

fn main() {}
