packages/rust/holy/tests/fail/02-tuple-struct.stderr
error: Getters macro only supports structs with named fields
 --> tests/fail/02-tuple-struct.rs:4:1
  |
4 | struct Nope(i32, i32);
  | ^^^^^^^^^^^^^^^^^^^^^^
